# rustdemo

./: Cargo.toml
collections_demo/: Cargo.toml
collections_demo/src/: main.rs
collectionsdemo/: Cargo.toml
enum_demo/src/: main.rs
enumdemo/: Cargo.toml
generic_demo/src/: main.rs
hashmap_demo/src/: main.rs
hashmapdemo/: Cargo.toml
hashmapdemo/src/: main.rs
life_cycle/src/: main.rs
match_demo/src/: main.rs
mem_take_replace/: Cargo.toml
mem_take_replace/src/: main.rs
module_demo/src/: main.rs
moduledemo/: Cargo.toml
moduledemo/src/: lib.rs  main.rs
panic_demo/: Cargo.toml
panicdemo/src/: main.rs
result_demo/: Cargo.toml
result_demo/src/: main.rs
rpc_demo/: Cargo.toml  build.rs
rpc_demo/proto/: records.proto
rpc_demo/src/: client.rs  server.rs
src/: main.rs
stringdemo/: Cargo.toml
stringdemo/src/: main.rs
struct_demo/: Cargo.toml
struct_demo/src/: main.rs
structdemo/src/: main.rs
thread_demo/: Cargo.toml
thread_demo/src/: main.rs
tokio_demo/: Cargo.toml
tokio_demo/src/: main.rs
trait_demo/src/: lib.rs  main.rs
use_demo/: Cargo.toml
use_demo/src/: lib.rs  main.rs
use_demo/src/front_of_house/: hosting.rs
use_dyn/: Cargo.toml
use_dyn/src/: main.rs
