[package]
name = "rustdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
utf8_slice = "1.0.0"

[workspace]
members = [
    "struct_demo",
    "enum_demo",
    "match_demo",
    "module_demo",
    "use_demo",
    "collections_demo",
    "string_demo",
    "hashmap_demo",
    "panic_demo",
    "result_demo",
    "rpc_demo",
    "generic_demo",
    "trait_demo",
    "thread_demo",
    "life_cycle",
    "mem_take_replace",
    "use_dyn",
]
