[package]
name = "rpc_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tonic = "0.9.2"
prost = "0.11.9"
tokio = { version = "1.28.1", features = [
    "macros",
    "sync",
    "time",
    "rt-multi-thread",
] }
tokio-stream = "0.1.14"
futures-core = "0.3.28"
futures-util = "0.3.28"
async-stream = "0.3.5"
tracing = "0.1.37"
anyhow = "1.0.71"
serde = "1.0.163"
serde_json = "1.0.96"


[build-dependencies]
tonic-build = "0.9.2"
